2010-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/plot.c (interrupt_setup): Ctrl+C crashes windows console build.
	SF Patch #2848002

2010-02-16  Peter Juhasz

	* src/graphics.c src/plot2d.c src/term.c docs/gnuplot.doc
	demo/circles.dem demo/energy_circles.dat:  Extend plot style
	"with circles" to allow optional start and end values for each arc.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Add the option
	"close" to the windows terminal driver. Update documentation
	accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Fix for windows terminal ignoring explicit fontname and
	size for labels.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wmenu.c (SendMacro): Bugfix in call to _getcwd.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Add the options "size" and "position" to the windows
	terminal driver. Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c src/win/wresourc.h: Add the possibility to
	save the current graph window as EMF file. Add a Ctrl+S shortcut for
	the graph window and add an entry to the window's system menu.
	
	* term/win.trm: Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c: Update code to copy to clipboard as enhanced
	metafile, add Ctrl+C shortcut for graph window.
	
	* term/win.trm: Update documentation accordingly.

2010-02-15  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/save.c
	src/set.c src/show.c: New style option (candlesticks or
	financebars) for 'with boxplots'. Apply the current setting of
	'set bars' to boxplots drawn in candlestick style.

2010-02-12  Ethan A Merritt  <merritt@u.washington.edu>
